[package]
name = "thrussh_ssh_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
vte = "0.10.1"
anyhow = "1.0.51"
futures = "0.3.19"

[dev-dependencies]
tokio = "1.15.0"
env_logger = "0.9.0"
